--- a/fms-gui-client/src/app/shared/nav/nav.component.html
+++ b/fms-gui-client/src/app/shared/nav/nav.component.html
@@ -3,6 +3,6 @@
   <!-- TODO: Define JSON Schema for routes.json -->
   <mat-list-item *ngFor="let item of navItems" (click)="nav.click()">
     <mat-icon matListIcon>{{item.icon}}</mat-icon>
-    <a [routerLink]=[item.route] #nav>{{item.title}}</a>
+    <a [routerLink]="['/' + item.path]" #nav>{{item.title}}</a>
   </mat-list-item>
 </mat-nav-list>
