--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -1,19 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body {
-  min-height: 100%;
+* {
+  line-height: 1.5em;
 }
 
 // Classes
-.loaded { background-color: green; }
-.notLoaded { background-color: red; }
+$small: 500px;
+$medium: 800px;
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+
+  // Small screens
+  @media all and (max-width: $small) {
+    flex-direction: column;
+  }
+}
+
+.margin-1em { margin: 1em; }
+.margin-side-1em { margin: 0 1em;}
+
+.grid { display: grid; }
+.grid-cols-2 { grid-template-columns: repeat(2, 1fr); }
+.grid-cols-2-auto { grid-template-columns: repeat(2, auto); }
+.grid-cols-3 { grid-template-columns: repeat(3, 1fr); }
+.grid-cols-3-auto { grid-template-columns: repeat(3, auto); }
+.grid-cols-4 { grid-template-columns: repeat(4, 1fr); }
+.grid-cols-4-auto { grid-template-columns: repeat(4, auto); }
+.grid-cols-5 { grid-template-columns: repeat(5, 1fr); }
+.grid-cols-5-auto { grid-template-columns: repeat(5, auto); }
+.grid-cols-6 { grid-template-columns: repeat(6, 1fr); }
+.grid-cols-6-auto { grid-template-columns: repeat(6, auto); }
+.grid-cols-7 { grid-template-columns: repeat(7, 1fr); }
+.grid-cols-7-auto { grid-template-columns: repeat(7, auto); }
+
+.grid-gap-sm { grid-gap: 2px; }
 
 // Tags
-a { outline: 0; }
+a, button, button:focus { outline: none !important; }
+
+h2 { font-size: 1.5rem !important; }
+
+html, body { min-height: 100%; }
 
 body {
-  font-family: Roboto, Arial, sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 15px !important;
   margin: 0;
 }
 
