FMS-C5 Redo previous commit

--- a/fms-gui-client/src/app/statuspanel/statuspanel.component.html
+++ b/fms-gui-client/src/app/statuspanel/statuspanel.component.html
@@ -5,9 +5,9 @@
   <div *ngIf="fmsData" class="margin-side-1em">
     <div id="status-panel">
       <!-- Contains the control buttons on the left side of the panel -->
-      <div id="control-container" *ngIf="statusControls">
+      <div id="control-container" *ngIf="Controls">
         <h2>Controls</h2>
-        <div *ngFor="let control of statusControls">
+        <div *ngFor="let control of Controls">
           <button mat-button>
             <div class="button-container">
               <span>{{control.code}}</span>
@@ -32,208 +32,8 @@
       </div>
       <!-- Contains the additional, specially highlighted information -->
       <div id="highlight-container" class="flex-container">
-        <!-- TODO: Define in an external file all cards, which should be displayed on the right side -->
-        <!-- TODO: Add labels to the list items, so we know which item describes what -->
-        <div id="status-container">
-          <h2>Status</h2>
-            <!-- TODO: Define in an external file which items should be displayed in which window -->
-            <ul>
-              <li>
-                <span>Rocketstate</span>
-                {{separator}}
-                {{fmsData.status.rocketState}}
-              </li>
-              <li>
-                <span>Flight substate</span>
-                {{separator}}
-                {{fmsData.status.flightSubstate}}
-              </li>
-              <li>
-                <span>Servo sep 1 pos</span>
-                {{separator}}
-                {{fmsData.status.servoPos.array.Element0}}
-              </li>
-              <li>
-                <span>Servo sep 2 pos</span>
-                {{separator}}
-                {{fmsData.status.servoPos.array.Element1}}
-              </li>
-              <li>
-                <span>Servo recov pos</span>
-                {{separator}}
-                {{fmsData.status.servoPos.array.Element2}}
-              </li>
-              <li>
-                <span>CPU load</span>
-                {{separator}}
-                {{fmsData.status.cpu_load}}
-              </li>
-              <li>
-                <span>Sepadet ADC Value</span>
-                {{separator}}
-                {{fmsData.status.sepadet_adc_value}}
-              </li>
-              <li>
-                <span>Seven Segment</span>{{separator}}
-              </li>
-              <li>
-                <span>Igniter [V]</span>{{separator}}
-              </li>
-              <li>
-                <span>Igniter HP [V]</span>{{separator}}
-              </li>
-            </ul>
-        </div>
-        <div id="additional-container">
-          <h2>Additional</h2>
-          <ul>
-            <li>
-              <span>press</span>{{separator}}
-            </li>
-            <li>
-              <span>GPS1</span>{{separator}}
-            </li>
-            <li>
-              <span>GPS1</span>{{separator}}
-            </li>
-          </ul>
-        </div>
-        <div id="temperature-container">
-          <h2>Temperature</h2>
-          <ul>
-            <li>
-              <span>tmp100</span>{{separator}}
-            </li>
-            <li>
-              <span>presstmp</span>{{separator}}
-            </li>
-            <li>
-              <span>gyrotmp</span>{{separator}}
-            </li>
-            <li>
-              <span>mgyrotmp</span>{{separator}}
-            </li>
-          </ul>
-        </div>
-        <div id="accelerations-container">
-          <h2>Accelerations</h2>
-          <ul>
-            <li>
-              <span>Adxl345 x</span>{{separator}}
-            </li>
-            <li>
-              <span>Adxl345 y</span>{{separator}}
-            </li>
-            <li>
-              <span>Adxl345 z</span>{{separator}}
-            </li>
-            <li>
-              <span>Adxl377 x</span>{{separator}}
-            </li>
-            <li>
-              <span>Adxl377 y</span>{{separator}}
-            </li>
-            <li>
-              <span>Adxl377 z</span>{{separator}}
-            </li>
-            <li>
-              <span>MPU acc x</span>{{separator}}
-            </li>
-            <li>
-              <span>MPU acc y</span>{{separator}}
-            </li>
-            <li>
-              <span>MPU acc z</span>{{separator}}
-            </li>
-          </ul>
-        </div>
-        <div id="psu-container">
-          <h2>PSU</h2>
-          <ul>
-            <li>
-              <span>vservo</span>{{separator}}
-            </li>
-            <li>
-              <span>vhv</span>{{separator}}
-            </li>
-            <li>
-              <span>imcon</span>{{separator}}
-            </li>
-            <li>
-              <span>iaaux</span>{{separator}}
-            </li>
-            <li>
-              <span>iacon</span>{{separator}}
-            </li>
-            <li>
-              <span>imaux</span>{{separator}}
-            </li>
-            <li>
-              <span>vxbee</span>{{separator}}
-            </li>
-            <li>
-              <span>vgps</span>{{separator}}
-            </li>
-            <li>
-              <span>vbat1</span>{{separator}}
-            </li>
-            <li>
-              <span>vbat2</span>{{separator}}
-            </li>
-            <li>
-              <span>tmphv</span>{{separator}}
-            </li>
-            <li>
-              <span>tmpuc</span>{{separator}}
-            </li>
-          </ul>
-        </div>
-        <div id="gyros-container">
-          <h2>Gyros</h2>
-          <ul>
-            <li>
-              <span>gyro x</span>{{separator}}
-            </li>
-            <li>
-              <span>gyro y</span>{{separator}}
-            </li>
-            <li>
-              <span>gyro z</span>{{separator}}
-            </li>
-            <li>
-              <span>mpug x</span>{{separator}}
-            </li>
-            <li>
-              <span>mpug y</span>{{separator}}
-            </li>
-            <li>
-              <span>mpug z</span>{{separator}}
-            </li>
-          </ul>
-        </div>
-        <div id="magnometers-container">
-          <h2>Magnometers</h2>
-          <ul>
-            <li>
-              <span>hmc x</span>{{separator}}
-            </li>
-            <li>
-              <span>hmc y</span>{{separator}}
-            </li>
-            <li>
-              <span>hmc z</span>{{separator}}
-            </li>
-            <li>
-              <span>mpumag x</span>{{separator}}
-            </li>
-            <li>
-              <span>mpumag y</span>{{separator}}
-            </li>
-            <li>
-              <span>mpumag z</span>{{separator}}
-            </li>
-          </ul>
-        </div>
+        <!-- TODO: Move the cards and which cards should be displayed to the server -->
+        <!-- TODO: Display the cards from cards/statuspanel -->
       </div>
     </div>
   </div>
