--- a/fms-gui-client/src/app/statuspanel/statuspanel.component.html
+++ b/fms-gui-client/src/app/statuspanel/statuspanel.component.html
@@ -5,9 +5,9 @@
   <div *ngIf="fmsData" class="margin-side-1em">
     <div id="status-panel">
       <!-- Contains the control buttons on the left side of the panel -->
-      <div id="control-container" *ngIf="Controls">
+      <div id="control-container" *ngIf="controls">
         <h2>Controls</h2>
-        <div *ngFor="let control of Controls">
+        <div *ngFor="let control of controls">
           <button mat-button>
             <div class="button-container">
               <span>{{control.code}}</span>
@@ -34,6 +34,15 @@
       <div id="highlight-container" class="flex-container">
         <!-- TODO: Move the cards and which cards should be displayed to the server -->
         <!-- TODO: Display the cards from cards/statuspanel -->
+        <h2>Status</h2>
+        <div *ngFor="let card of cards">
+          <div>
+            <h3>{{card.title}}</h3>
+            <ul>
+              <li *ngFor="let item of card.list">{{item.name}}{{separator}}{{fmsData.status.flags}}</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
