--- a/fms-gui-client/src/app/controls/controls.component.html
+++ b/fms-gui-client/src/app/controls/controls.component.html
@@ -1,13 +1,15 @@
 <!-- Contains the control buttons on the left side of the panel -->
-<div id="control-container" *ngIf="controls">
-  <h2>Controls</h2>
-  <div *ngFor="let control of controls">
-    <button mat-button>
+<main *ngIf="controls">
+  <mat-toolbar>
+    <span>{{ title }}</span>
+  </mat-toolbar>
+    <div class="grid grid-cols-5">
+    <button mat-button *ngFor="let control of controls">
       <span>{{control.code}}</span>
       &nbsp;
       <span>{{control.name}}</span>
       &nbsp;
       <mat-icon matListIcon [class.md-inactive]="control.inactive">{{control.icon}}</mat-icon>
     </button>
-  </div>
-</div>
+    </div>
+</main>
