FMS-S2 Finish implementing WebSocket updates to all components, capsule everything FMS related in the FMSDataService

--- a/fms-gui-client/src/app/flightmode/flightmode.component.html
+++ b/fms-gui-client/src/app/flightmode/flightmode.component.html
@@ -2,7 +2,9 @@
   <mat-toolbar>
     <span>{{ title }}</span>
   </mat-toolbar>
-  <div *ngIf="fmsDataService.present | async" class="margin-side-1em">
+  <div *ngIf="fmsDataService.isFMSDataPresent" class="margin-side-1em">
     Is present
+    <br/>
+    {{fmsDataService.getFMSData().startingTime}}
   </div>
 </main>
