FMS-C10 Fix ng test, make automatically created tests work correctly with Karma

--- a/fms-gui-client/src/app/cards/cards.component.html
+++ b/fms-gui-client/src/app/cards/cards.component.html
@@ -2,5 +2,5 @@
   <mat-toolbar>
     <span>{{ title }}</span>
   </mat-toolbar>
-  <!-- TODO: Display the cards from cards/statuspanel -->
+  <!-- TODO: Display the cards from cards/status-panel -->
 </main>
