--- a/fms-gui-client/src/app/status-panel/status-panel.component.html
+++ b/fms-gui-client/src/app/status-panel/status-panel.component.html
@@ -7,7 +7,7 @@
       <!-- Contains the status bytes, which indicate if something is on or off -->
       <h2>Flags</h2>
       <div class="grid grid-cols-4 grid-gap-sm">
-        <div *ngFor='let item of fmsDataService.getValue("status/flags")'>
+        <div *ngFor='let item of FmsDataService.castToArrayNameValuePair(FmsDataService.getValue("status/flags"))'>
           <span
             class="badge"
             [class.badge-success]="item.value"
